tests/baselines/reference/mutuallyRecursiveGenericBaseTypes1.errors.txt
tests/cases/compiler/mutuallyRecursiveGenericBaseTypes1.ts(2,5): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/mutuallyRecursiveGenericBaseTypes1.ts(3,5): error TS2463: Duplicate overload signature for foo.


==== tests/cases/compiler/mutuallyRecursiveGenericBaseTypes1.ts (2 errors) ====
    interface A<T> {
        foo(): B<T>; // instead of B does see this
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
        foo(): void; // instead of B does see this
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
     
        foo2(): B<number>;
    }
     
    interface B<T> extends A<T> {
        bar(): void;
    }
     
    var b: B<number>;
    b.foo(); // should not error
    
     
    